--- a/package.json
+++ b/package.json
@@ -10,20 +10,32 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^7.0",
+        "@fortawesome/fontawesome-free": "^5.12.1",
+        "axios": "^0.19.2",
+        "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
-        "popper.js": "^1.12",
+        "popper.js": "^1.16.1",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "sass": "^1.26.3",
+        "sass-loader": "7.*",
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "vuetify": "^2.2.19"
+        "bootstrap": "^4.4.1",
+        "chart.js": "^2.9.3",
+        "chartjs-plugin-annotation": "^0.5.7",
+        "chartjs-plugin-datalabels": "^0.7.0",
+        "date-fns": "^2.11.0",
+        "jquery-easing": "0.0.1",
+        "serialize-javascript": "^2.1.2",
+        "vue-chartjs": "^3.5.0",
+        "vue-filter-date-format": "^1.3.1",
+        "vue-google-charts": "^0.3.2",
+        "vue-router": "^3.1.6",
+        "vuetify": "^2.2.18",
+        "vuex": "^3.1.3"
     }
 }
