--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "@mdi/js": "^5.0.45",
         "bootstrap": "^4.4.1",
         "chart.js": "^2.9.3",
         "chartjs-plugin-annotation": "^0.5.7",
