--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "serialize-javascript": "^2.1.2",
         "vue-chartjs": "^3.5.0",
         "vue-filter-date-format": "^1.3.1",
+        "vue-filter-date-parse": "^1.1.3",
         "vue-google-charts": "^0.3.2",
         "vue-router": "^3.1.6",
         "vuetify": "^2.2.22",
