--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
         "date-fns": "^2.12.0",
         "jquery-easing": "0.0.1",
         "serialize-javascript": "^2.1.2",
+        "simplebar-vue": "^1.4.0",
         "vue-chartjs": "^3.5.0",
         "vue-filter-date-format": "^1.3.1",
         "vue-filter-date-parse": "^1.1.3",
         "vue-google-charts": "^0.3.2",
         "vue-router": "^3.1.6",
-        "vuetify": "^2.2.25",
+        "vuetify": "^2.2.26",
         "vuex": "^3.3.0"
     }
 }
