--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
         "vue-filter-date-format": "^1.3.1",
         "vue-filter-date-parse": "^1.1.3",
         "vue-google-charts": "^0.3.2",
+        "vue-json-excel": "^0.2.98",
         "vue-router": "^3.3.2",
         "vuedraggable": "^2.23.2",
-        "vuetify": "^2.2.32",
+        "vuetify": "^2.2.33",
         "vuex": "^3.4.0"
     }
 }
