--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "nesbot/carbon": "^2.32"
+        "nesbot/carbon": "^2.32",
+        "socialiteproviders/zoho": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
