--- a/package.json
+++ b/package.json
@@ -2,47 +2,45 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.2",
+        "@fortawesome/fontawesome-free": "^5.15.3",
         "axios": "^0.21.1",
-        "cross-env": "^5.1",
-        "jquery": "^3.5.1",
-        "laravel-mix": "^6.0.18",
-        "lodash": "^4.17.20",
+        "cross-env": "^7.0",
+        "jquery": "^3.6.0",
+        "laravel-mix": "^6.0.19",
+        "lodash": "^4.17.21",
         "popper.js": "^1.16.1",
-        "postcss": "^8.2.4",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.5",
-        "sass-loader": "^7.3.1",
+        "postcss": "^8.2.15",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.32.12",
+        "sass-loader": "^11.1.0",
+        "url-loader": "^4.1.1",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.6",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "@mdi/js": "^5.9.55",
-        "bootstrap": "^4.6.0",
-        "chart.js": "^2.9.4",
-        "chartjs-plugin-annotation": "^0.5.7",
-        "chartjs-plugin-datalabels": "^0.7.0",
-        "date-fns": "^2.16.1",
+        "bootstrap": "^5.0.0",
+        "date-fns": "^2.21.3",
         "jquery-easing": "0.0.1",
         "serialize-javascript": "^5.0.1",
-        "simplebar-vue": "^1.6.0",
+        "simplebar-vue": "^1.6.3",
         "vue-chartjs": "^3.5.1",
         "vue-filter-date-format": "^1.3.1",
         "vue-filter-date-parse": "^1.1.3",
         "vue-google-charts": "^0.3.3",
-        "vue-json-excel": "^0.2.99",
+        "vue-json-excel": "^0.3.0",
         "vue-router": "^3.5.1",
         "vuedraggable": "^2.24.3",
-        "vuetify": "^2.4.3",
-        "vuex": "^3.6.1"
+        "vuetify": "^2.4.11",
+        "vuex": "^3.6.2"
     }
 }
